* Print out some screen statistics, next to the frame rate.

--- a/MobileClient/LocalFiles/index.html
+++ b/MobileClient/LocalFiles/index.html
@@ -23,7 +23,10 @@
 	</head>
 	
 	<body>
-		<div id="FrameStats"></div>
+		<div id="RuntimeStats" onclick="$('#RuntimeStats').hide();">
+			<div id="FrameStats"></div>
+			<div id="ScreenStats"></div>
+		</div>
 
 		<div id="Screen">
 			<div id="LoadingScreen" class="dialog_blocker" style="display: block">
