--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<!--meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"-->
+		<script type="text/javascript" src="Assets-Scaled/AssetsScale.js"></script>
 		<script type="text/javascript" src="Javascript/Utils/ClientDevUtils.js"></script>
 		<script type="text/javascript" src="Javascript/Render/DisplayManager.js"></script>
 		<!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
@@ -30,6 +31,7 @@
 		<div id="RuntimeStats" onclick="$('#RuntimeStats').hide();">
 			<div id="FrameStats"></div>
 			<div id="ScreenStats"></div>
+			<div id="AssetsStats"></div>
 			<div id="DebugStats"></div>
 		</div>
 
@@ -356,6 +358,8 @@
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Particles/GroundExplosion.js"></script>
 
+
+			<script type="text/javascript" src="Javascript/AssetsStaticScaler.js"></script>
 
 
 		<!-- Battle Screen -->
