* Zoom level is now compensating for asset scale as well (e.g. DPR 1.5 but Asset scale is 2). * Fixed CSS for texts, buttons, divs to look good on higher asset scales. Using .asset-scale-2 and .asset-scale-3 classes. * Fixed DevConsole buttons to be less buggy and easier to press.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -41,8 +41,10 @@
 			</div>
 
 			<div id="Console">
-				<button id="BtnConsoleClose" onclick="$('#Console').hide();">X</button>
-				<button id="BtnConsoleClear" onclick="$('#Console').children().not(':button').remove();">Clear</button>
+				<div id="ConsoleButtons">
+					<button id="BtnConsoleClear" onclick="$('#Console').children().not('#ConsoleButtons').remove();">Clear</button>
+					<button id="BtnConsoleClose" onclick="$('#Console').hide();">&nbsp; &nbsp; X &nbsp; &nbsp;</button>
+				</div>
 			</div>
 
 
