--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -1,10 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 	<head>
-		<!--meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"-->
-		<script type="text/javascript" src="Assets-Scaled/AssetsScale.js"></script>
-		<script type="text/javascript" src="Javascript/Utils/ClientDevUtils.js"></script>
-		<script type="text/javascript" src="Javascript/Render/DisplayManager.js"></script>
+		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 		<!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
 
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -308,6 +305,7 @@
 			<script type="text/javascript" src="Javascript/Render/RenderEvents.js"></script>
 			<script type="text/javascript" src="Javascript/ClientEvents.js"></script>
 			
+			<script type="text/javascript" src="Assets-Scaled/AssetsScale.js"></script>
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
 			<script type="text/javascript" src="Javascript/Render/StoreRender.js"></script>
 			<script type="text/javascript" src="Javascript/UnitFactoryClient.js"></script>
@@ -317,6 +315,9 @@
 			<script type="text/javascript" src="Javascript/Render/ImageUtils/SpriteColorizeManager.js"></script>
 			<script type="text/javascript" src="Javascript/Render/ImageUtils/SpriteTracker.js"></script>
 			<script type="text/javascript" src="Javascript/Render/SceneRenderer.js"></script>
+
+			<script type="text/javascript" src="Javascript/Utils/ClientDevUtils.js"></script>
+			<script type="text/javascript" src="Javascript/Render/DisplayManager.js"></script>
 		
 		<!-- Components -->
 			<script type="text/javascript" src="Javascript/Render/Components/CAnimations.js"></script>
@@ -346,14 +347,6 @@
 			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
 
-			<script type="text/javascript" src="Javascript/ClientStates/ClientStateManager.js"></script>
-			<script type="text/javascript" src="Javascript/ClientStates/TestGame.js"></script>
-			
-			
-			<script type="text/javascript" src="Javascript/DevConsole.js"></script>
-			<script type="text/javascript" src="Javascript/Main.js"></script>
-
-
 		<!-- Animations -->
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Base.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/TeslaTrooper.js"></script>
@@ -380,6 +373,14 @@
 
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script>
 			
+
+		<!-- ==========	Mobile Client - Run ====================== -->
+			<script type="text/javascript" src="Javascript/ClientStates/ClientStateManager.js"></script>
+			<script type="text/javascript" src="Javascript/ClientStates/TestGame.js"></script>
+			
+			
+			<script type="text/javascript" src="Javascript/DevConsole.js"></script>
+			<script type="text/javascript" src="Javascript/Main.js"></script>
 
 		<!-- ==========	Mobile Client - Editor ====================== -->
 			<script type="text/javascript" src="Javascript/Editor/EditorEvents.js"></script>
