* Added "useCanvasInstance" feature to the sprite.js. It produces layer with divs per sprite (as normal), but instead of using div background, a canvas element inside is created and drawn. This allows to still can have colorized units, but avoid performance hit of having huge canvases being updated all the time while units animate. Sky-rocket performance boost. * Applied to units layer. * Fixed: on unit idle animation end, doesn't update to "idle" state and last frame stayed.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -335,6 +335,7 @@
 			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystemScrollOptimizer.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/LayersUpdateSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/CanvasInstancesUpdateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/ActionFogRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/VisibilityFogRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
