--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -335,6 +335,7 @@
 			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/AnimationSystemScrollOptimizer.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/LayersUpdateSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/CanvasInstancesUpdateSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/ActionFogRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/VisibilityFogRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/TileRenderingSystem.js"></script>
