* Preparing for AI. * Serialization can now return the objects instead of directly making a JSON string. * PlayerController is disabled while current player is AI.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -272,7 +272,8 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
 			
-			
+		<!-- AI -->
+			<script type="text/javascript" src="Javascript/Core/AI/Systems/AIController.js"></script>
 			
 		<!-- ==========	Mobile Client ====================== -->
 			<script type="text/javascript" charset="utf-8" src="Javascript/BrowserBackwardCompatibility.js"></script>
