* AI: First AI implementation - presses end turn after 2 seconds :D

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -273,7 +273,10 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
 			
 		<!-- AI -->
+			<script type="text/javascript" src="Javascript/Core/AI/AIEvents.js"></script>
+
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AIController.js"></script>
+			<script type="text/javascript" src="Javascript/Core/AI/Systems/AISimulationSystem.js"></script>
 			
 		<!-- ==========	Mobile Client ====================== -->
 			<script type="text/javascript" charset="utf-8" src="Javascript/BrowserBackwardCompatibility.js"></script>
