--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -274,10 +274,14 @@
 			
 		<!-- AI -->
 			<script type="text/javascript" src="Javascript/Core/AI/AIEvents.js"></script>
+			<script type="text/javascript" src="Javascript/Core/AI/AITask.js"></script>
 
-			<script type="text/javascript" src="Javascript/Core/AI/Systems/AIController.js"></script>
+			<script type="text/javascript" src="Javascript/Core/AI/Components/CAIData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AISimulationSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskAttackingSystem.js"></script>
 			
+			<script type="text/javascript" src="Javascript/AIController.js"></script>
+
 		<!-- ==========	Mobile Client ====================== -->
 			<script type="text/javascript" charset="utf-8" src="Javascript/BrowserBackwardCompatibility.js"></script>
 
