--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -352,6 +352,7 @@
 			<script type="text/javascript" src="Javascript/Render/Systems/UnitRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/IdleAnimationsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/ActionsRenderingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/DebugTilesRenderingSystem.js"></script>
 			
 			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
