--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -355,6 +355,7 @@
 			<script type="text/javascript" src="Javascript/Render/Systems/DebugTilesRenderingSystem.js"></script>
 			
 			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
+			<script type="text/javascript" src="Javascript/CommonController.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
 
 		<!-- Animations -->
