* Moved auto-heal logic in a common please, not just PlayerController (cause AI also uses it). * Fixed: wrong assert when creating unit in the game executor.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -355,6 +355,7 @@
 			<script type="text/javascript" src="Javascript/Render/Systems/DebugTilesRenderingSystem.js"></script>
 			
 			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
+			<script type="text/javascript" src="Javascript/CommonController.js"></script>
 			<script type="text/javascript" src="Javascript/PlayerController.js"></script>
 
 		<!-- Animations -->
