* AI: Implemented capturing task system. Will move and capture base. Will attack if occupied. * AI: Fixed not showing action fog upon capturing structure. * Fixed: base owner color did not change on capturing. * Fixed: CanvasInstancesUpdateSystem wrong refreshing of sprites.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -279,6 +279,7 @@
 			<script type="text/javascript" src="Javascript/Core/AI/Components/CAIData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AISimulationSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskAttackingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskCaptureSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskBuyingSystem.js"></script>
 			
 			<script type="text/javascript" src="Javascript/AIController.js"></script>
