--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -294,6 +294,7 @@
 			<script type="text/javascript" src="Javascript/Core/AI/Components/CAIData.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AISimulationSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskAttackingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskExploreSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskCaptureSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskHealSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Core/AI/Systems/AITaskBuyingSystem.js"></script>
