--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -13,6 +13,7 @@
 		<!-- ==========	Render ====================== -->
 			<link rel="stylesheet" href="Assets/Render/SceneRenderer.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/TileRenderingSystem.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/Render/OverlayEffects.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/Placeables.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/ActionMenu.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/DevConsole.css" type="text/css" media="screen">
@@ -372,6 +373,7 @@
 			<script type="text/javascript" src="Javascript/Render/Systems/UnitRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/IdleAnimationsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/ActionsRenderingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/Render/Systems/FloatingTextsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/Render/Systems/DebugTilesRenderingSystem.js"></script>
 			
 			<script type="text/javascript" src="Javascript/ActionsMenuController.js"></script>
