* Changed the floating text/statistics outline method by using additional spans (removed CSS text-shadow) for backward compatibility with old Androids.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -333,6 +333,7 @@
 
 			<script type="text/javascript" src="Javascript/Render/RenderEvents.js"></script>
 			<script type="text/javascript" src="Javascript/ClientEvents.js"></script>
+			<script type="text/javascript" src="Javascript/Render/RenderUtils.js"></script>
 			
 			<script type="text/javascript" src="Assets-Scaled/AssetsScale.js"></script>
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
