--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -333,6 +333,7 @@
 
 			<script type="text/javascript" src="Javascript/Render/RenderEvents.js"></script>
 			<script type="text/javascript" src="Javascript/ClientEvents.js"></script>
+			<script type="text/javascript" src="Javascript/Render/RenderUtils.js"></script>
 			
 			<script type="text/javascript" src="Assets-Scaled/AssetsScale.js"></script>
 			<script type="text/javascript" src="Javascript/Render/TileGlobals.js"></script>
