--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -13,6 +13,7 @@
 		<!-- ==========	Render ====================== -->
 			<link rel="stylesheet" href="Assets/Render/SceneRenderer.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/TileRenderingSystem.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/Render/TextEffects.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/OverlayEffects.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/Placeables.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/ActionMenu.css" type="text/css" media="screen">
