* Fixed: floating texts to flicker less in irregular resolution. :( * Fixed: floating texts use text-shadow if possible (and fallback to 4xElements simulation if Android 2.x or css is not supported).

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -13,6 +13,7 @@
 		<!-- ==========	Render ====================== -->
 			<link rel="stylesheet" href="Assets/Render/SceneRenderer.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/TileRenderingSystem.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/Render/TextEffects.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/OverlayEffects.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Render/Placeables.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/ActionMenu.css" type="text/css" media="screen">
