--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -21,6 +21,7 @@
 			<link rel="stylesheet" href="Assets/Dialogs.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Game.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/BattleScreen.css" type="text/css" media="screen">
+			<link rel="stylesheet" href="Assets/FightScreen.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Editor.css" type="text/css" media="screen">
 			<link rel="stylesheet" href="Assets/Main.css" type="text/css" media="screen">
 		
@@ -77,6 +78,11 @@
 				</div>
 			</div>
 
+			<div id="FightScreenContainer">
+				<div id="FightScreen">
+					
+				</div>
+			</div>
 
 			<div id="GameWorldMap">
 			</div>
@@ -152,6 +158,7 @@
 				<button id="BtnRestart">Res</button>
 				<button id="BtnDebug">Debug</button>
 				<button id="BtnBattle" onclick="BattleRenderingManager.visualizeBattle(currentState.eworld, lastCreated, selected.CTile.placedObjects[0]);" >Battle</button>
+				<button id="BtnFight" onclick="FightRenderingManager.visualizeBattle(currentState.eworld, lastCreated, selected.CTile.placedObjects[0]);" >Fight</button>
 
 				<button id="BtnAddress">Address</button>
 				<button id="BtnBrowse" style="display: none;">Browse</button>
@@ -407,6 +414,20 @@
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsParticleSystem.js"></script>
 
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script>
+
+
+		<!-- Fight Screen -->
+			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingEvents.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/FightRenderer.js"></script>
+
+			<script type="text/javascript" src="Javascript/FightRendering/Components/CSpatial.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnit.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnitRendering.js"></script>
+
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightControllerSystem.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingSystem.js"></script>
+
+			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingManager.js"></script>
 			
 
 		<!-- ==========	Mobile Client - Run ====================== -->
