* Added idle animations controller for fight.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -426,6 +426,7 @@
 
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightControllerSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingSystem.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsAnimationsController.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingManager.js"></script>
 			
