--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -95,6 +95,8 @@
 
 			<div id="GameWorldMap">
 			</div>
+			<canvas id="GameWorldMapShot" style="display: none;">
+			</canvas>
 			<div id="GameWorldMapEditor">
 			</div>
 
