--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -183,7 +183,7 @@
 				<button id="BtnRestart">Res</button>
 				<button id="BtnDebug">Debug</button>
 				<button id="BtnAnimationTool" onclick="$('#AnimationInfoTool').toggle(); $('#ToolbarMore').hide();" >Animation Info</button>
-				<button id="BtnBattle" onclick="BattleRenderingManager.visualizeBattle(currentState.eworld, lastCreated, selected.CTile.placedObjects[0]);" >Battle</button>
+				<!--button id="BtnBattle" onclick="BattleRenderingManager.visualizeBattle(currentState.eworld, lastCreated, selected.CTile.placedObjects[0]);" >Battle</button-->
 				<button id="BtnFight" onclick="FightRenderingManager.visualizeBattleTest(); $('#ToolbarMore').hide();" >Fight</button>
 
 				<button id="BtnAddress">Address</button>
@@ -429,7 +429,7 @@
 
 
 		<!-- Battle Screen -->
-			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingEvents.js"></script>
+			<!--script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingEvents.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/BattleFieldRenderer.js"></script>
 
 			<script type="text/javascript" src="Javascript/BattleRendering/Components/CBattleUnit.js"></script>
@@ -442,7 +442,7 @@
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsAnimationsController.js"></script>
 			<script type="text/javascript" src="Javascript/BattleRendering/Systems/BattleFieldUnitsParticleSystem.js"></script>
 
-			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script>
+			<script type="text/javascript" src="Javascript/BattleRendering/BattleRenderingManager.js"></script-->
 
 
 		<!-- Fight Screen -->
