* Added tile background under the fighting units feet.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -454,6 +454,7 @@
 			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnitRendering.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightControllerSystem.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightTilesRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsAnimationsController.js"></script>
 
