--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -355,6 +355,7 @@
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/iscroll.js"></script> <!-- TODO: Use LITE, min version -->
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/sylvester.src.js"></script>
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/sprite.js"></script>
+			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/t.js"></script>
 
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/Blob.js"></script>
 			<script type="text/javascript" charset="utf-8" src="Javascript/3rdParty/FileSaver.min.js"></script>
