--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -102,8 +102,13 @@
 				<div id="FightFrame">
 				</div>
 
-				<div id="FightScreenQuit" style="position:absolute; bottom: 0px; right: 0px; color: white; background: rgba(82, 82, 82, 0.88); border-radius: 8px; padding: 8px;">
-					Quit
+				<div style="position:absolute; bottom: 16px; right: 4px;">
+					<span id="FightScreenRestart" style="margin: 4px; color: white; background: rgba(82, 82, 82, 0.88); border-radius: 8px; padding: 8px;">
+						Restart
+					</span>
+					<span id="FightScreenQuit" style="margin: 4px; color: white; background: rgba(82, 82, 82, 0.88); border-radius: 8px; padding: 8px;">
+						Quit
+					</span>
 				</div>
 			</div>
 
