--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -446,11 +446,13 @@
 			<script type="text/javascript" src="Javascript/FightRendering/Components/CSpatial.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnit.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnitRendering.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnitRenderingEffects.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightControllerSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightTilesRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsAnimationsController.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingEffectsSystem.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingManager.js"></script>
 			
