* Fight: Added portraits of the commanders/generals.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -96,10 +96,10 @@
 			</div>
 
 			<div id="FightScreenContainer">
+				<div id="FightFrame">
+				</div>
 				<div id="FightScreen">
 					
-				</div>
-				<div id="FightFrame">
 				</div>
 
 				<div style="position:absolute; bottom: 16px; right: 4px;">
@@ -453,6 +453,7 @@
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsAnimationsController.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingEffectsSystem.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightPortraitsController.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingManager.js"></script>
 			
@@ -462,6 +463,9 @@
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/Base.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/TeslaTrooper.js"></script>
+
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Baron.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Colonel.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/TeslaTrooperFight.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Particles/GroundExplosion.js"></script>
