--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -454,6 +454,7 @@
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsAnimationsController.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingEffectsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightPortraitsController.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitStatsController.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingManager.js"></script>
 			
