* Fight: fixed exception on completing hurt animations, while changing screen size (fight restart)

--- a/Internal Tools/SpriteTestground/SpriteTestground.html
+++ b/Internal Tools/SpriteTestground/SpriteTestground.html
@@ -116,6 +116,8 @@
 		
 		
 		<!-- Utils -->
+			<script type="text/javascript" src="../_Client/Javascript/Utils/ClientUtils.js"></script>
+			<script type="text/javascript" src="../_Client/Javascript/Render/RenderUtils.js"></script>
 			<script type="text/javascript" src="../_Client/Javascript/Render/ImageUtils/Colors.js"></script>
 			<script type="text/javascript" src="../_Client/Javascript/Render/ImageUtils/SpriteColorizeManager.js"></script>
 		
