--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -442,6 +442,7 @@
 		<!-- Fight Screen -->
 			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingEvents.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/FightRenderer.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/FightHealthBar.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/Components/CSpatial.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Components/CFightUnit.js"></script>
@@ -455,6 +456,7 @@
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitsRenderingEffectsSystem.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightPortraitsController.js"></script>
 			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitStatsController.js"></script>
+			<script type="text/javascript" src="Javascript/FightRendering/Systems/FightUnitHealthsController.js"></script>
 
 			<script type="text/javascript" src="Javascript/FightRendering/FightRenderingManager.js"></script>
 			
