--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -325,6 +325,7 @@
 			<script type="text/javascript" src="Javascript/Core/Gameplay/Actions/ActionHeal.js"></script>
 			
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsDefinitions.js"></script>
+			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitsUtils.js"></script>
 			<script type="text/javascript" src="Javascript/Core/Gameplay/PlaceableFactory/UnitFactory.js"></script>
 			
 		<!-- AI -->
