--- a/trunk/MobileClient/www/index.html
+++ b/trunk/MobileClient/www/index.html
@@ -431,6 +431,9 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/SpriteAnimations.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/Base.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/HQ.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/City.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/Factory.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/TeslaTrooper.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Baron.js"></script>
