* Replaced World and Fight units with real art (Peace Keeper + Flak Trooper). * Backed dev assets to 1.0-Dev. * Fixed bug with event frames number check.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -442,11 +442,17 @@
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/HQ.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/City.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/World/Factory.js"></script>
+
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/TeslaTrooper.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/PeaceKeeper.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Units/FlakTrooper.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Baron.js"></script>
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightPortraits/Colonel.js"></script>
+
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/TeslaTrooperFight.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/PeaceKeeperFight.js"></script>
+			<script type="text/javascript" src="Assets/Render/SpriteAnimations/FightUnits/FlakTrooperFight.js"></script>
 
 			<script type="text/javascript" src="Assets/Render/SpriteAnimations/Particles/GroundExplosion.js"></script>
 
