* Added end taunt to fight. PeaceKeeper has one.

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -71,8 +71,8 @@
 					<table id="StoreList" class="dialog_body">
 						<tbody>
 							<tr>
-								<td>Unit</td>
-								<td>Price</td>
+								<th>Unit</th>
+								<th>Price</th>
 							</tr>
 						</tbody>
 					</table>
