* Fixed: AI mode not working (regression).

--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -195,7 +195,7 @@
 				</div>
 			</div>
 
-			<span id="LbCredits">0</button>
+			<span id="LbCredits">0</span>
 
 			<div id="AIToolbarContainer" class="toolbar_bottom_container">
 				<div id="AIToolbar" class="toolbar_bottom">
